# gps

./: .gitignore  LICENSE  README.md  app.py  pyproject.toml  requirements-basic.txt  requirements.txt  test_basic_functionality.py  test_location_service.py  test_openai_service.py  test_server.py  test_voice_integration.py
config/: env_template.txt  settings.py
src/gps_inspection/: __init__.py
src/gps_inspection/controllers/: __init__.py  chat_controller.py  search_controller.py  station_controller.py
src/gps_inspection/models/: __init__.py  database.py  wireless_station.py
src/gps_inspection/services/: __init__.py  location_service.py  openai_service.py  search_service.py
src/gps_inspection/utils/: __init__.py  cache_utils.py  korean_utils.py
templates/: api_docs.html  chat.html  index.html
